# hola

./: .gitignore  README.txt
06-03-20/: tarea2.txt
12-03-20/: exp.cpp  fac  fac.cpp  over  over.cpp  over.cpp~  overauto  overauto.cpp~  overmy
Experimental/: enlaces.txt
Naei-11-2020-2021/:  parameters_0.mcfg   parameters_1.mcfg   parameters_G64.mcfg
Naei-11-2020-2021/03-12-2020/: analisis.py
datos_vacacionales2/2019_10_31/: 31-10-2019-PX5-HPGe-1200s-fuentes1-31.mca  31-10-2019-PX5-HPGe-1200s-fuentes1-32.mca  31-10-2019-PX5-HPGe-1200s-fuentes1-33.mca  31-10-2019-PX5-HPGe-1200s-fuentes1-34.mca  31-10-2019-PX5-HPGe-1200s-fuentes1-41.mca  31-10-2019-PX5-HPGe-1200s-fuentes1-42.mca  31-10-2019-PX5-HPGe-1200s-fuentes1-43.mca  31-10-2019-PX5-HPGe-1200s-fuentes1-44.mca  31-10-2019-PX5-HPGe-1200s-fuentes1-51.mca  31-10-2019-PX5-HPGe-1200s-fuentes1-52.mca  31-10-2019-PX5-HPGe-1200s-fuentes1-53.mca  31-10-2019-PX5-HPGe-1200s-fuentes1-54.mca  31-10-2019-PX5-HPGe-1200s-fuentes1-fondo.mca  mortero31f1.py  mortero32f1.py  mortero33f1.py  mortero34f1.py  mortero41f1.py  mortero42f1.py  mortero43f1.py  mortero44f1.py  mortero51f1.py  mortero52f1.py  mortero53f1.py  mortero54f1.py  morterofondo2f1.py
datos_vacacionales2/26_10_2019/: 26-10-2019-PX5-HPGe-1200s-fuentes1-11.mca  26-10-2019-PX5-HPGe-1200s-fuentes1-12.mca  26-10-2019-PX5-HPGe-1200s-fuentes1-13.mca  26-10-2019-PX5-HPGe-1200s-fuentes1-14.mca  26-10-2019-PX5-HPGe-1200s-fuentes1-21.mca  26-10-2019-PX5-HPGe-1200s-fuentes1-22.mca  26-10-2019-PX5-HPGe-1200s-fuentes1-23.mca  26-10-2019-PX5-HPGe-1200s-fuentes1-24.mca  26-10-2019-PX5-HPGe-1200s-fuentes1-fondo.mca  26-10-2019-PX5-HPGe-300s-fuentes2-11.mca  26-10-2019-PX5-HPGe-300s-fuentes2-12.mca  26-10-2019-PX5-HPGe-300s-fuentes2-13.mca  26-10-2019-PX5-HPGe-300s-fuentes2-14.mca  26-10-2019-PX5-HPGe-300s-fuentes2-21.mca  26-10-2019-PX5-HPGe-300s-fuentes2-22.mca  26-10-2019-PX5-HPGe-300s-fuentes2-23.mca  26-10-2019-PX5-HPGe-300s-fuentes2-24.mca  26-10-2019-PX5-HPGe-300s-fuentes2-31.mca  26-10-2019-PX5-HPGe-300s-fuentes2-32.mca  26-10-2019-PX5-HPGe-300s-fuentes2-33.mca  26-10-2019-PX5-HPGe-300s-fuentes2-34.mca  26-10-2019-PX5-HPGe-300s-fuentes2-41.mca  26-10-2019-PX5-HPGe-300s-fuentes2-42.mca  26-10-2019-PX5-HPGe-300s-fuentes2-43.mca  26-10-2019-PX5-HPGe-300s-fuentes2-44.mca  26-10-2019-PX5-HPGe-300s-fuentes2-fondo.mca  (+27 more)
herramientas/: 2.cpp
protecion radiológica/: janis.bat  janis.sh
tesis/retrodispersion/morteros/m3/gMC-BS-saturacion-varios-3/: CMakeLists.txt  metodos_MC.py  padrote_paso_0.5_Inicio_0_hasta_12.py  run1.mac
tesis/retrodispersion/morteros/m3/gMC-BS-saturacion-varios-3/src/: gMCDetectorConstruction.cc  gMCEmCalorimeterSD.cc
(+1808 files in other folders)
